--- a/.github/workflows/Build-x86.yml
+++ b/.github/workflows/Build-x86.yml
@@ -206,7 +206,7 @@ jobs:
 
   delete:
     runs-on: ubuntu-latest
-    needs: [ARMv8, x86, x86-docker, x86-original]
+    needs: [ x86]
     
     steps:
 
