--- a/.github/workflows/Build-x86.yml
+++ b/.github/workflows/Build-x86.yml
@@ -118,18 +118,18 @@ jobs:
     - name: Check space usage
       if: (!cancelled())
       run: df -hT
-
-    - name: Prepare artifact
-      run: |
-        cd ./openwrt/bin
-        mkdir -p ./firmware
-        mkdir -p ./package
-        rm -rf $(find ../bin/targets/ -name "packages" -o -name "*.buildinfo" -o -name "sha256sums" -o -name "*.manifest")
-        cp -rf $(find ../bin/targets/ -type f -name "*combined*") ./firmware/
-        cp -rf $(find ../bin/packages/ -type f -name "*.ipk") ./package/
-        cd ./package
-        tar -zcvf IPK.tar.gz *
-        mv -f IPK.tar.gz ../firmware/
+#
+#    - name: Prepare artifact
+#      run: |
+#        cd ./openwrt/bin
+#        mkdir -p ./firmware
+#        mkdir -p ./package
+#        rm -rf $(find ../bin/targets/ -name "packages" -o -name "*.buildinfo" -o -name "sha256sums" -o -name "*.manifest")
+#        cp -rf $(find ../bin/targets/ -type f -name "*combined*") ./firmware/
+#        cp -rf $(find ../bin/packages/ -type f -name "*.ipk") ./package/
+#        cd ./package
+#        tar -zcvf IPK.tar.gz *
+#        mv -f IPK.tar.gz ../firmware/
 
     - name: Deliver package
       uses: actions/upload-artifact@v3
