--- a/.github/workflows/Build-x86.yml
+++ b/.github/workflows/Build-x86.yml
@@ -17,7 +17,7 @@ jobs:
     env:
       REPO_URL: https://github.com/coolsnowwolf/lede
       REPO_BRANCH: master
-      FEEDS_CONF: lede/feeds.conf.default
+      FEEDS_CONF: feeds.conf.default
       CONFIG_FILE: lede/Build-x86.config
       DIY_P1_SH: lede/diy-part1.sh
       DIY_P2_SH: lede/diy-x86.sh
