--- a/.github/workflows/Build-x86.yml
+++ b/.github/workflows/Build-x86.yml
@@ -127,7 +127,7 @@ jobs:
         rm -rf $(find ../bin/targets/ -name "packages" -o -name "*.buildinfo" -o -name "sha256sums" -o -name "*.manifest")
         cp -rf $(find ../bin/targets/ -type f -name "*combined*") ./firmware/
         cp -rf $(find ../bin/packages/ -type f -name "*.ipk") ./package/
-        cd ./package
+#        cd ./package
 #        tar -zcvf IPK.tar.gz *
 #        mv -f IPK.tar.gz ../firmware/
 #
