--- a/.github/workflows/Build-ARMv8.yml
+++ b/.github/workflows/Build-ARMv8.yml
@@ -211,7 +211,7 @@ jobs:
 
   delete:
     runs-on: ubuntu-latest
-    needs: [ARMv8, x86, x86-docker, x86-original]
+    needs: [ ARMv8]
     
     steps:
 
