--- a/.github/workflows/Build-ARMv8.yml
+++ b/.github/workflows/Build-ARMv8.yml
@@ -16,7 +16,7 @@ env:
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: lede/Build-arm.config
   DIY_P1_SH: lede/diy-part1-or.sh
-  DIY_P2_SH: lede/diy-part2.sh
+  DIY_P2_SH: lede/diy-ARMv8.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   UPLOAD_COWTRANSFER: false
