--- a/.github/workflows/Build-ARMv8.yml
+++ b/.github/workflows/Build-ARMv8.yml
@@ -128,9 +128,9 @@ jobs:
         rm -rf $(find ../bin/targets/ -name "packages" -o -name "*.buildinfo" -o -name "sha256sums" -o -name "*.manifest")
         cp -rf $(find ../bin/targets/ -type f) ./firmware/
         cp -rf $(find ../bin/packages/ -type f -name "*.ipk") ./package/
-        cd ./package
-        tar -zcvf IPK.tar.gz *
-        mv -f IPK.tar.gz ../
+#        cd ./package
+#        tar -zcvf IPK.tar.gz *
+#        mv -f IPK.tar.gz ../
 
     - name: Deliver package
       uses: actions/upload-artifact@v3
