--- a/.github/workflows/Build-ARMv8.yml
+++ b/.github/workflows/Build-ARMv8.yml
@@ -150,24 +150,24 @@ jobs:
         cd openwrt
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "{status}={success}" >> $GITHUB_OUTPUT
-
-    - name: Package Armvirt as OpenWrt
-      uses: ophub/flippy-openwrt-actions@main
-      env:
-        OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
-        PACKAGE_SOC: vplus_beikeyun_l1pro_r66s_r68s_s905_s905d_s905x2_s905x3_s912_s922x_s922x-n2
-        KERNEL_AUTO_LATEST:  true
-        KERNEL_VERSION_NAME: 5.15.85_6.1.1
-        WHOAMI: Sil
-
-    - name: copy update files
-      run: |
-        cd /opt/openwrt_packit
-        cp ./files/update*.sh ./output/
-        rm -rf $(find ./output/ -name "sha256sums" -o -name "*.gz.sha" -o -name "*.tar.gz")
-        cd $GITHUB_WORKSPACE/openwrt/bin
-        cp IPK.tar.gz /opt/openwrt_packit/output/
-        echo "{status}={success}" >> $GITHUB_OUTPUT
+#
+#    - name: Package Armvirt as OpenWrt
+#      uses: ophub/flippy-openwrt-actions@main
+#      env:
+#        OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
+#        PACKAGE_SOC: vplus_beikeyun_l1pro_r66s_r68s_s905_s905d_s905x2_s905x3_s912_s922x_s922x-n2
+#        KERNEL_AUTO_LATEST:  true
+#        KERNEL_VERSION_NAME: 5.15.85_6.1.1
+#        WHOAMI: Sil
+#
+#    - name: copy update files
+#      run: |
+#        cd /opt/openwrt_packit
+#        cp ./files/update*.sh ./output/
+#        rm -rf $(find ./output/ -name "sha256sums" -o -name "*.gz.sha" -o -name "*.tar.gz")
+#        cd $GITHUB_WORKSPACE/openwrt/bin
+#        cp IPK.tar.gz /opt/openwrt_packit/output/
+#        echo "{status}={success}" >> $GITHUB_OUTPUT
 
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
