--- a/.github/workflows/Build-x86-original.yml
+++ b/.github/workflows/Build-x86-original.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       REPO_URL: https://github.com/openwrt/openwrt
-      REPO_BRANCH: main
+      REPO_BRANCH: openwrt-23.05
       FEEDS_CONF: feeds.conf.default
       CONFIG_FILE: lede/Build-x86.config
       DIY_P1_SH: lede/diy-part1.sh
