--- a/.github/workflows/Build-x86.yml
+++ b/.github/workflows/Build-x86.yml
@@ -7,7 +7,7 @@ on:
     inputs:
       ssh:
         description: 'SSH connection to Actions'
-        required: false
+        required: true
         default: 'false'
 
 jobs:
