--- a/.github/workflows/Build-x86.yml
+++ b/.github/workflows/Build-x86.yml
@@ -8,7 +8,7 @@ on:
       ssh:
         description: 'SSH connection to Actions'
         required: true
-        default: 'false'
+        default: 'true'
 
 jobs:
   x86:
