--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -48,7 +48,7 @@ jobs:
       if: steps.cacheHash.outputs.cache-hit != 'true'
       uses: peter-evans/repository-dispatch@v2
       with:
-        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         event-type: lede Source Code Update
 
     - name: Source Code Update notification
