--- a/.github/workflows/Build-x86.yml
+++ b/.github/workflows/Build-x86.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   x86:
     name: x86
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-22.04
     env:
       REPO_URL: https://github.com/coolsnowwolf/lede
       REPO_BRANCH: master
@@ -45,14 +45,13 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        # docker rmi `docker images -q`
-        docker rmi `docker images -q | xargs -r docker rmi`
+        docker images -q | xargs -r docker rmi || echo "No images to delete"
         sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
         sudo -E apt-mark hold grub-efi-amd64-signed
         sudo -E apt update
         sudo -E apt -y purge azure-cli* docker* ghc* zulu* llvm* firefox google* dotnet* powershell* openjdk* mysql* php* mongodb* dotnet* snap*
         sudo -E apt -y full-upgrade
-        sudo -E apt -y install $(curl -fsSL https://is.gd/depends_ubuntu_2404)
+        sudo -E apt -y install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
         sudo -E systemctl daemon-reload
         sudo -E apt -y autoremove --purge
         sudo -E apt clean
